# iamcompact-vetting

./: LICENSE  NOTICE  README.md  pyproject.toml
.dvc/: config
3rd-party-licenses/: README.md
iamcompact_vetting/: pdhelpers.py  pyam_helpers.py  target_classes.py  vetter_base.py
iamcompact_vetting/data/d43/: .gitignore  gdp_pop_iam_compact_20230625_IAMCformat.xlsx.dvc
iamcompact_vetting/iam/: dims.py  iam_vetter_core.py  timeseries_criteria_core.py
iamcompact_vetting/output/: base.py  excel.py  timeseries.py
iamcompact_vetting/pea_timeseries/: dims.py  timeseries_criteria_core.py
iamcompact_vetting/targets/: ar6_vetting_targets.py  iamcompact_harmonization_targets.py  target_classes.py
notebooks/: .gitignore  assess_ar6_vetting_ranges.py  gdp_pop_harmonization_assessment.xlsx.dvc  gdp_pop_harmonization_assessment_direct.xlsx.dvc  vetting_assessment.ipynb  vetting_assessment.py  vetting_assessment_1st_modelling_cycle.ipynb  vetting_assessment_1st_modelling_cycle.py  vetting_results.xlsx.dvc
notebooks/cycle1_study_model_outputs/: cycle1_results.py  data_dict.pkl.dvc
notebooks/study_model_outputs/S01_NECPs/: .gitignore
notebooks/study_model_outputs/S03_Geopolitics_causing_tech_delay/: .gitignore
src/iamcompact_vetting/: __init__.py  class_helpers.py
src/iamcompact_vetting/data/d43/: .gitignore  __init__.py  gdp_pop_iam_compact_20230625_IAMCformat.xlsx  gdp_pop_iam_compact_20230625_IAMCformat_region_mapped.xlsx  gdp_pop_iam_compact_20230625_regions_renamed.xlsx.dvc  gdp_pop_iam_compact_20230625_regions_renamed_with_iso3.xlsx.dvc
src/iamcompact_vetting/iam/: __init__.py
src/iamcompact_vetting/output/: __init__.py  base.py  excel.py  iamcompact_outputs.py  timeseries.py
src/iamcompact_vetting/output/styling/: base.py
src/iamcompact_vetting/pea_timeseries/: timeseries_criteria_core.py
src/iamcompact_vetting/targets/: __init__.py  iamcompact_harmonization_targets.py  target_classes.py
tests/: __init__.py  test_iam_vetter_core.py  test_pyam_helpers.py  test_test.py  test_timeseries_criteria_core.py
tests/iam/: test_iam_vetter_core.py
tests/pea_timeseries/: test_timeseries_criteria_core.py
