[project]
name = "iamcompact-vetting"
version = "0.1.0"
description = "Vetting checks for model outputs in the HORIZON EUROPE project IAM COMPACT"
authors = [
    { name = "Jan Ivar Korsbakken", email = "janko@cicero.oslo.no" }
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "pyam-iamc>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.20.0",
    "pytest>=8.0.0",
    "ipykernel>=6.29.0",
    "dvc[ssh]>=3.48.4"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["iamcompact_vetting"]
